--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,6 +25,7 @@ jobs:
       - uses: RyanSiu1995/kubebuilder-action@v1.1
         with:
           version: 2.3.1
+          etcdVersion: 3.5.0
       - run: echo "/usr/local/kubebuilder/bin" >> $GITHUB_PATH
       - name: setup openvswitch
         run: sudo sh -c "apt update && apt install -y openvswitch-switch && systemctl start openvswitch-switch"
@@ -74,7 +75,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: install e2e environment dependency
-        run: sudo sh -c "apt update && apt install -y iperf iputils-arping openvswitch-switch && systemctl start openvswitch-switch"
+        run: sudo sh -c "apt update && apt install -y openvswitch-switch && systemctl start openvswitch-switch"
 
       - name: allow ssh connect to localhost
         run: sudo -H sh -c "ssh-keygen -qN '' </dev/zero; cp ~/.ssh/id_rsa.pub ~/.ssh/authorized_keys"
