--- a/deploy/crds/policyrule.lynx.smartx.com_policyrules.yaml
+++ b/deploy/crds/policyrule.lynx.smartx.com_policyrules.yaml
@@ -1,10 +1,10 @@
 
 ---
-apiVersion: apiextensions.k8s.io/v1beta1
+apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.2.5
+    controller-gen.kubebuilder.io/version: v0.6.2
   creationTimestamp: null
   name: policyrules.policyrule.lynx.smartx.com
 spec:
@@ -15,79 +15,78 @@ spec:
     plural: policyrules
     singular: policyrule
   scope: Cluster
-  subresources:
-    status: {}
-  validation:
-    openAPIV3Schema:
-      description: PolicyRule
-      properties:
-        apiVersion:
-          description: 'APIVersion defines the versioned schema of this representation
-            of an object. Servers should convert recognized schemas to the latest
-            internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
-          type: string
-        kind:
-          description: 'Kind is a string value representing the REST resource this
-            object represents. Servers may infer this from the endpoint the client
-            submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
-          type: string
-        metadata:
-          type: object
-        spec:
-          description: PolicyRuleSpec defines the desired state of PolicyRule
-          properties:
-            action:
-              type: string
-            defaultPolicyRule:
-              type: boolean
-            direction:
-              type: string
-            dstIpAddr:
-              type: string
-            dstPort:
-              type: integer
-            dstPortMask:
-              type: integer
-            ipProtocol:
-              type: string
-            priority:
-              format: int32
-              type: integer
-            srcIpAddr:
-              type: string
-            srcPort:
-              type: integer
-            srcPortMask:
-              type: integer
-            tcpFlags:
-              type: string
-            tier:
-              type: string
-          required:
-          - action
-          - direction
-          - ipProtocol
-          - priority
-          - tcpFlags
-          type: object
-        status:
-          description: PolicyRuleStatus defines the observed state of PolicyRule
-          properties:
-            enforceState:
-              type: string
-            matchStatistics:
-              format: int64
-              type: integer
-          required:
-          - enforceState
-          - matchStatistics
-          type: object
-      type: object
-  version: v1alpha1
   versions:
   - name: v1alpha1
+    schema:
+      openAPIV3Schema:
+        description: PolicyRule
+        properties:
+          apiVersion:
+            description: 'APIVersion defines the versioned schema of this representation
+              of an object. Servers should convert recognized schemas to the latest
+              internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+            type: string
+          kind:
+            description: 'Kind is a string value representing the REST resource this
+              object represents. Servers may infer this from the endpoint the client
+              submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+            type: string
+          metadata:
+            type: object
+          spec:
+            description: PolicyRuleSpec defines the desired state of PolicyRule
+            properties:
+              action:
+                type: string
+              defaultPolicyRule:
+                type: boolean
+              direction:
+                type: string
+              dstIpAddr:
+                type: string
+              dstPort:
+                type: integer
+              dstPortMask:
+                type: integer
+              ipProtocol:
+                type: string
+              priority:
+                format: int32
+                type: integer
+              srcIpAddr:
+                type: string
+              srcPort:
+                type: integer
+              srcPortMask:
+                type: integer
+              tcpFlags:
+                type: string
+              tier:
+                type: string
+            required:
+            - action
+            - direction
+            - ipProtocol
+            - priority
+            - tcpFlags
+            type: object
+          status:
+            description: PolicyRuleStatus defines the observed state of PolicyRule
+            properties:
+              enforceState:
+                type: string
+              matchStatistics:
+                format: int64
+                type: integer
+            required:
+            - enforceState
+            - matchStatistics
+            type: object
+        type: object
     served: true
     storage: true
+    subresources:
+      status: {}
 status:
   acceptedNames:
     kind: ""
