--- a/deploy/crds/security.lynx.smartx.com_endpoints.yaml
+++ b/deploy/crds/security.lynx.smartx.com_endpoints.yaml
@@ -1,10 +1,10 @@
 
 ---
-apiVersion: apiextensions.k8s.io/v1beta1
+apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.2.5
+    controller-gen.kubebuilder.io/version: v0.6.2
   creationTimestamp: null
   name: endpoints.security.lynx.smartx.com
 spec:
@@ -15,66 +15,65 @@ spec:
     plural: endpoints
     singular: endpoint
   scope: Cluster
-  subresources:
-    status: {}
-  validation:
-    openAPIV3Schema:
-      properties:
-        apiVersion:
-          description: 'APIVersion defines the versioned schema of this representation
-            of an object. Servers should convert recognized schemas to the latest
-            internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
-          type: string
-        kind:
-          description: 'Kind is a string value representing the REST resource this
-            object represents. Servers may infer this from the endpoint the client
-            submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
-          type: string
-        metadata:
-          type: object
-        spec:
-          properties:
-            managePlaneID:
-              description: Lynx allows endpoints from different sources, we distinguish
-                the source of endpoint by field ManagePlaneID.
-              type: string
-            reference:
-              properties:
-                externalIDName:
-                  type: string
-                externalIDValue:
-                  type: string
-              required:
-              - externalIDName
-              - externalIDValue
-              type: object
-            vid:
-              format: int32
-              type: integer
-          required:
-          - reference
-          - vid
-          type: object
-        status:
-          properties:
-            ips:
-              items:
-                description: IPAddress is net ip address, can be ipv4 or ipv6. Format
-                  like 192.168.10.12 or fe80::488e:b1ff:fe37:5414
-                pattern: ^(((([1]?\d)?\d|2[0-4]\d|25[0-5])\.){3}(([1]?\d)?\d|2[0-4]\d|25[0-5]))|([\da-fA-F]{1,4}(\:[\da-fA-F]{1,4}){7})|(([\da-fA-F]{1,4}:){0,5}::([\da-fA-F]{1,4}:){0,5}[\da-fA-F]{1,4})$
-                type: string
-              type: array
-            macAddress:
-              type: string
-          type: object
-      required:
-      - spec
-      type: object
-  version: v1alpha1
   versions:
   - name: v1alpha1
+    schema:
+      openAPIV3Schema:
+        properties:
+          apiVersion:
+            description: 'APIVersion defines the versioned schema of this representation
+              of an object. Servers should convert recognized schemas to the latest
+              internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+            type: string
+          kind:
+            description: 'Kind is a string value representing the REST resource this
+              object represents. Servers may infer this from the endpoint the client
+              submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+            type: string
+          metadata:
+            type: object
+          spec:
+            properties:
+              managePlaneID:
+                description: Lynx allows endpoints from different sources, we distinguish
+                  the source of endpoint by field ManagePlaneID.
+                type: string
+              reference:
+                properties:
+                  externalIDName:
+                    type: string
+                  externalIDValue:
+                    type: string
+                required:
+                - externalIDName
+                - externalIDValue
+                type: object
+              vid:
+                format: int32
+                type: integer
+            required:
+            - reference
+            - vid
+            type: object
+          status:
+            properties:
+              ips:
+                items:
+                  description: IPAddress is net ip address, can be ipv4 or ipv6. Format
+                    like 192.168.10.12 or fe80::488e:b1ff:fe37:5414
+                  pattern: ^(((([1]?\d)?\d|2[0-4]\d|25[0-5])\.){3}(([1]?\d)?\d|2[0-4]\d|25[0-5]))|([\da-fA-F]{1,4}(\:[\da-fA-F]{1,4}){7})|(([\da-fA-F]{1,4}:){0,5}::([\da-fA-F]{1,4}:){0,5}[\da-fA-F]{1,4})$
+                  type: string
+                type: array
+              macAddress:
+                type: string
+            type: object
+        required:
+        - spec
+        type: object
     served: true
     storage: true
+    subresources:
+      status: {}
 status:
   acceptedNames:
     kind: ""
