--- a/deploy/crds/security.lynx.smartx.com_tiers.yaml
+++ b/deploy/crds/security.lynx.smartx.com_tiers.yaml
@@ -1,10 +1,10 @@
 
 ---
-apiVersion: apiextensions.k8s.io/v1beta1
+apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.2.5
+    controller-gen.kubebuilder.io/version: v0.6.2
   creationTimestamp: null
   name: tiers.security.lynx.smartx.com
 spec:
@@ -15,45 +15,44 @@ spec:
     plural: tiers
     singular: tier
   scope: Cluster
-  validation:
-    openAPIV3Schema:
-      properties:
-        apiVersion:
-          description: 'APIVersion defines the versioned schema of this representation
-            of an object. Servers should convert recognized schemas to the latest
-            internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
-          type: string
-        kind:
-          description: 'Kind is a string value representing the REST resource this
-            object represents. Servers may infer this from the endpoint the client
-            submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
-          type: string
-        metadata:
-          type: object
-        spec:
-          properties:
-            description:
-              description: Description is an optional field to add more information
-                regarding the purpose of this Tier.
-              type: string
-            priority:
-              format: int32
-              type: integer
-            tierMode:
-              enum:
-              - Whitelist
-              - Blacklist
-              type: string
-          required:
-          - priority
-          - tierMode
-          type: object
-      required:
-      - spec
-      type: object
-  version: v1alpha1
   versions:
   - name: v1alpha1
+    schema:
+      openAPIV3Schema:
+        properties:
+          apiVersion:
+            description: 'APIVersion defines the versioned schema of this representation
+              of an object. Servers should convert recognized schemas to the latest
+              internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+            type: string
+          kind:
+            description: 'Kind is a string value representing the REST resource this
+              object represents. Servers may infer this from the endpoint the client
+              submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+            type: string
+          metadata:
+            type: object
+          spec:
+            properties:
+              description:
+                description: Description is an optional field to add more information
+                  regarding the purpose of this Tier.
+                type: string
+              priority:
+                format: int32
+                type: integer
+              tierMode:
+                enum:
+                - Whitelist
+                - Blacklist
+                type: string
+            required:
+            - priority
+            - tierMode
+            type: object
+        required:
+        - spec
+        type: object
     served: true
     storage: true
 status:
