feat: add namespace for endpoint and securitypolicy
Signed-off-by: zwtop <wang.zhan@smartx.com>

--- a/deploy/crds/security.lynx.smartx.com_endpoints.yaml
+++ b/deploy/crds/security.lynx.smartx.com_endpoints.yaml
@@ -14,7 +14,7 @@ spec:
     listKind: EndpointList
     plural: endpoints
     singular: endpoint
-  scope: Cluster
+  scope: Namespaced
   versions:
   - name: v1alpha1
     schema:
