feat: support networkingv1 PolicyTypes
Signed-off-by: zwtop <wang.zhan@smartx.com>

--- a/deploy/crds/security.lynx.smartx.com_securitypolicies.yaml
+++ b/deploy/crds/security.lynx.smartx.com_securitypolicies.yaml
@@ -295,6 +295,23 @@ spec:
                   - name
                   type: object
                 type: array
+              policyTypes:
+                description: List of rule types that the Security relates to. Valid
+                  options are "Ingress", "Egress", or "Ingress,Egress". If this field
+                  is not specified, it will default based on the existence of Ingress
+                  or Egress rules; policies that contain an Egress section are assumed
+                  to affect Egress, and all policies (whether or not they contain
+                  an Ingress section) are assumed to affect Ingress. If you want to
+                  write an egress-only policy, you must explicitly specify policyTypes
+                  [ "Egress" ]. Likewise, if you want to write a policy that specifies
+                  that no egress is allowed, you must specify a policyTypes value
+                  that include "Egress" (since such a policy would not include an
+                  Egress section and would otherwise default to just [ "Ingress" ]).
+                items:
+                  description: Policy Type string describes the NetworkPolicy type
+                    This type is beta-level in 1.8
+                  type: string
+                type: array
               symmetricMode:
                 description: SymmetricMode will generated symmetry rules for the policy.
                   Defaults to false.
