feat: support Namespace and NamespaceSelector in EndpointGroup
* Add Namespace and NamespaceSelector in EndpointGroup.Spec.

* Update EndpointGroup validation in webhook.

* Update EndpointController support select Endpoints by Namespace and NamespaceSelector.

* Add unit tests to verify the feature.

* Update clusterrole of lynx-controller, allow get/list/watch namespace.

Signed-off-by: zwtop <wang.zhan@smartx.com>

--- a/deploy/lynx-controller/role.yaml
+++ b/deploy/lynx-controller/role.yaml
@@ -20,6 +20,14 @@ rules:
   - list
   - watch
 - apiGroups:
+  - ""
+  resources:
+  - namespaces
+  verbs:
+  - get
+  - list
+  - watch
+- apiGroups:
   - agent.lynx.smartx.com
   resources:
   - agentinfos
