--- a/deploy/crds/group.lynx.smartx.com_endpointgroups.yaml
+++ b/deploy/crds/group.lynx.smartx.com_endpointgroups.yaml
@@ -35,14 +35,70 @@ spec:
           spec:
             description: EndpointGroupSpec defines the desired state for EndpointGroup.
             properties:
-              description:
-                description: Description is an optional field to add more information
-                  regarding the purpose of this Group.
+              endpointSelector:
+                description: "EndpointSelector selects endpoints. This field follows
+                  standard label selector semantics; if present but empty, it selects
+                  all endpoints. \n If NamespaceSelector is set, then the EndpointGroup
+                  would select the endpoints matching EndpointSelector in the Namespaces
+                  selected by NamespaceSelector. If Namespace is set, then the EndpointGroup
+                  would select the endpoints matching EndpointSelector in the specific
+                  Namespace. If neither of NamespaceSelector or Namespace set, then
+                  the EndpointGroup would select the endpoints in all namespaces."
+                properties:
+                  matchExpressions:
+                    description: matchExpressions is a list of label selector requirements.
+                      The requirements are ANDed.
+                    items:
+                      description: A label selector requirement is a selector that
+                        contains values, a key, and an operator that relates the key
+                        and values.
+                      properties:
+                        key:
+                          description: key is the label key that the selector applies
+                            to.
+                          type: string
+                        operator:
+                          description: operator represents a key's relationship to
+                            a set of values. Valid operators are In, NotIn, Exists
+                            and DoesNotExist.
+                          type: string
+                        values:
+                          description: values is an array of string values. If the
+                            operator is In or NotIn, the values array must be non-empty.
+                            If the operator is Exists or DoesNotExist, the values
+                            array must be empty. This array is replaced during a strategic
+                            merge patch.
+                          items:
+                            type: string
+                          type: array
+                      required:
+                      - key
+                      - operator
+                      type: object
+                    type: array
+                  matchLabels:
+                    additionalProperties:
+                      type: string
+                    description: matchLabels is a map of {key,value} pairs. A single
+                      {key,value} in the matchLabels map is equivalent to an element
+                      of matchExpressions, whose key field is "key", the operator
+                      is "In", and the values array contains only "value". The requirements
+                      are ANDed.
+                    type: object
+                type: object
+              namespace:
+                description: "This is a namespace for select endpoints in. \n If Namespace
+                  is set, then the EndpointGroup would select the endpoints matching
+                  EndpointSelector in the specific Namespace. If this field is set
+                  then the NamespaceSelector field cannot be set."
                 type: string
-              selector:
-                description: Selector specifies a selector for Endpoint. An empty
-                  label selector matches all endpoints. A null label selector matches
-                  no endpoints.
+              namespaceSelector:
+                description: "NamespaceSelector selects namespaces. This field follows
+                  standard label selector semantics; if present but empty, it selects
+                  all namespaces. \n If NamespaceSelector is set, then the EndpointGroup
+                  would select the endpoints matching EndpointSelector in the Namespaces
+                  selected by NamespaceSelector. If this field is set then the Namespace
+                  field cannot be set."
                 properties:
                   matchExpressions:
                     description: matchExpressions is a list of label selector requirements.
