refactor(webhook): generate cert for webhook automatically

--- a/deploy/lynx-controller/role.yaml
+++ b/deploy/lynx-controller/role.yaml
@@ -11,6 +11,7 @@ rules:
   resources:
   - configmaps
   - events
+  - secrets
   verbs:
   - patch
   - create
@@ -19,6 +20,13 @@ rules:
   - get
   - list
   - watch
+- apiGroups:
+  - admissionregistration.k8s.io
+  resources:
+  - validatingwebhookconfigurations
+  verbs:
+  - update
+  - get
 - apiGroups:
   - ""
   resources:
