--- a/tests/e2e/config/webhook.yaml
+++ b/tests/e2e/config/webhook.yaml
@@ -24,6 +24,7 @@ webhooks:
           - securitypolicies
           - tiers
           - endpoints
+          - globalpolicies
       - apiGroups:
           - group.lynx.smartx.com
         apiVersions:
