refactor: update PolicyRule fields name
Replace "Ip" with "IP" and "Tcp" with "TCP".

Signed-off-by: zwtop <wang.zhan@smartx.com>

--- a/deploy/crds/policyrule.lynx.smartx.com_policyrules.yaml
+++ b/deploy/crds/policyrule.lynx.smartx.com_policyrules.yaml
@@ -40,7 +40,7 @@ spec:
                 type: string
               direction:
                 type: string
-              dstIpAddr:
+              dstIPAddr:
                 type: string
               dstPort:
                 type: integer
@@ -50,7 +50,7 @@ spec:
                 type: string
               ruleType:
                 type: string
-              srcIpAddr:
+              srcIPAddr:
                 type: string
               srcPort:
                 type: integer
