feat(plugin-tower): add PolicyController sync SecurityPolicy from tower
* Add SecurityPolicy and IsolationPolicy types, and their Informers and Trackers.

* Add SecurityPolicy/Endpoint create/update/delete ClusterRole.

* Add PolicyController sync SecurityPolicy from tower, add it to Manager.

Signed-off-by: zwtop <wang.zhan@smartx.com>

--- a/deploy/lynx-controller/role.yaml
+++ b/deploy/lynx-controller/role.yaml
@@ -63,13 +63,15 @@ rules:
   resources:
   - tiers
   - securitypolicies
-  - securitypolicies/status
   - endpoints
   - endpoints/status
   - globalpolicies
   verbs:
   - patch
+  - create
   - update
+  - delete
+  - deletecollection
   - get
   - list
   - watch
